fix absolute URL construction in the crawler + minor cosmetic changes